b=351561, fix thebes/cairo linking issues